--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
+logging.level.org.springframework.security=DEBUG
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
